# AULATAP

./: .gitignore  README.md  pubspec.yaml  pyproject.toml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
backend/: alembic.ini  create_user.py  test_core_imports.py
backend/alembic/: env.py
backend/alembic/versions/: 30b2cbb01c8b_add_more_size_for_password_hash.py  3e340546a4d2_creacion_inicial_del_esquema_de_.py  478ee06edecd_unir_ramas_de_migracion.py  86380e51923f_add_validacion_states_to_sesion_enum.py  b364ea42fc33_agregar_columna_tema_a_sesiondeclase.py
backend/app/: main.py
backend/app/application/use_cases/: AbrirSesionUseCase.py  AbrirValidacionUseCase.py  CerrarSesionUseCase.py  CerrarValidacionUseCase.py  CrearAsignaturaUseCase.py  CrearEstudianteUseCase.py  CrearHorarioUseCase.py  CrearUsuarioUseCase.py  (+8 more)
backend/app/core/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  logger.py  security.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/core/: app_router.dart  app_theme.dart
lib/ui/screens/: history_screen.dart  onboarding_screen.dart  register_screen.dart  settings_screen.dart  stub_screens.dart
lib/ui/widgets/: feature_card.dart
linux/: CMakeLists.txt
mobile/lib/: main.dart
mobile/lib/core/: auth_ms.dart  navigation_utils.dart
mobile/linux/runner/: my_application.cc
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/web/: index.html
mobile/windows/runner/: Runner.rc  main.cpp
test/: widget_test.dart
web/: manifest.json
windows/: CMakeLists.txt
(+62 files in other folders)
